# red_oxide

./: .editorconfig  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: main.rs
src/command/: mod.rs  self_update.rs  transcode.rs
src/config/: config.rs  constants.rs  mod.rs  models.rs
src/ext_deps/: util.rs
src/fs/: util.rs
src/github/: api.rs  error.rs  mod.rs  model.rs
src/imdl/: error.rs  hash.rs  mod.rs  torrent.rs  util.rs
src/redacted/: mod.rs  models.rs  upload.rs  util.rs
src/redacted/api/: client.rs  constants.rs  error.rs  mod.rs  model.rs  path.rs
src/spectrogram/: mod.rs  spectrogram.rs
src/tags/: util.rs
src/transcode/: error.rs  mod.rs  transcode.rs  util.rs
src/updater/: constants.rs  error.rs  mod.rs  release.rs
src/util/: http.rs
