[package]
name = "red_oxide"
version = "0.9.1"
edition = "2021"
build = "build.rs"
authors = ["DevYukine devyukine@gmx.de"]
description = "A simple helper while uploading music to redacted.sh"
homepage = "https://github.com/DevYukine/red_oxide"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "^1.0"
clap = { version = "^4.3", features = ["derive"] }
console = "^0.15"
indicatif = "^0.17"
reqwest = { version = "^0.12", features = ["rustls-tls", "json", "multipart", "stream"], default-features = false }
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "^0.1"
serde_derive = "^1"
thiserror = "^2"
tokio = { version = "^1", features = ["full"] }
regex = "^1"
audiotags = "^0.5"
env_logger = "^0.11"
log = "^0.4"
num_cpus = "^1.15"
tower = { version = "^0.5", features = ["util", "limit"] }
strum = "^0.26"
strum_macros = "^0.26"
derivative = "^2.2"
claxon = "^0.4"
async-recursion = "^1.0"
lazy_static = "^1.4"
dialoguer = "^0.11"
html-escape = "^0.2"
const_format = "^0.2"
futures-core = "^0.3"
bytes = "^1.5"
futures = "^0.3"

[build-dependencies]
built = "^0.7"
